<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mseron.worktimelogger.OnGoingActivity">

    <TextView
        android:text="@string/on_going_working_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_on_going_working_time"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:id="@+id/on_going_clock"
        android:layout_marginTop="23dp"
        android:textSize="50sp"
        android:textIsSelectable="false"
        android:layout_below="@+id/txt_on_going_working_time"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/planned_end_of_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_planned_end_of_day"
        android:layout_below="@+id/on_going_clock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:id="@+id/end_of_day_clock"
        android:layout_marginTop="27dp"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:layout_below="@+id/txt_planned_end_of_day"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/pauses_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_pauses_list"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pauses_list"
        android:layout_below="@+id/txt_pauses_list"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
